Correctly align og price. Fix desktop layout.

--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,13 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
-    min-height: 100vh;
     background-color: hsl(30, 38%, 92%) !important;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
 }
 
 /* TEXT STYLES */
@@ -22,31 +27,27 @@ h4 {
     color: hsl(30, 38%, 92%);
 }
 
+.text-decoration-line-through {
+    margin-bottom: 13px;
+}
+
 .price {
     font-family: 'Fraunces', serif;
 }
 
 .discount-price {
     color: hsl(158, 36%, 37%) !important;
-    font-size: 40px;
+    font-size: 35px;
 }
 
 .og-price {
-    display: block;
+    display: inline-block;
     font-size: 14px;
-    margin-top: 10px;
-}
-
-.text-decoration-line-through{
-    margin-top: 20px;
 }
 
 /* CARD STYLES */
 .card {
     font-family: 'Montserrat', sans-serif;
-    margin: 0 auto;
-    margin-top: 5vh;
-    padding-bottom: 10px;
     background-color: hsl(0, 0%, 100%) !important;
 }
 
@@ -79,11 +80,34 @@ h4 {
     body::before {
         content: "SM";
     }
+
+    .card {
+        width: 75%;
+        margin-top: 20px;
+    }
+
+    .product-image {
+        height: 300px
+    }
+
 }
 
-@media (min-width: 1440px) {
+@media (min-width: 800px) {
     body::before {
         content: "LG";
     }
+
+    .card {
+        flex-direction: row !important;
+        max-width: 600px;
+    }
+    
+    .product-image {
+        width: 50%;
+        height: 100%;
+        border-bottom-left-radius: 5px;
+        border-top-left-radius: 5px;
+    }
+
 }
 
